Classloader Performance Improvements #1
- better platform detection
- resolve unit test errors